# Codelens

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  app.py  evaluate.py  implementation.md  index.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
data/: README.md  score.py
deploy/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.inference  Dockerfile.llm  Dockerfile.worker  docker-compose.yml  k3s-setup.md  minikube.md
deploy/amnezia/: README.md  gen-awg-eu.sh
deploy/gitops/: README.md  application-monitoring.yaml  application-prod.yaml  application-secrets-prod.yaml  application-secrets-staging.yaml  application-staging.yaml  argocd-ingress.yaml  cluster-issuer.yaml  project.yaml
deploy/gitops/sealed/: README.md  seal.sh
deploy/gitops/sealed/prod/: .gitkeep  codelens-secrets.yaml
deploy/gitops/sealed/staging/: codelens-secrets.yaml
deploy/grafana/provisioning/dashboards/: provider.yml
deploy/helm/codelens/: Chart.yaml  values-k3s.yaml  values-local.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
docs/: 00-overview-and-dataflow.md  README.md  architecture.md  factory.md  retrieval-eval.md
docs/admin/: router.md
docs/auth/: auth.md
docs/clients/: backend-client.md
docs/deploy/: README.md  docker-compose.md  dockerfiles.md  nginx.md  observability-stack.md
docs/deploy/gitops/: gitops.md  sealed-secrets.md
docs/deploy/helm/: chart.md
docs/domain/: interfaces.md  models.md
docs/embeddings/: embeddings.md
docs/entrypoints/: app-streamlit.md  evaluate.md  index.md
docs/indexing/: parsers.md  pipeline.md
docs/ingest/: ingest.md
docs/jobs/: jobs.md
docs/llm/: providers.md  remote.md
docs/persistence/: caching.md  db.md  orm.md  repositories.md  schemas.md
docs/reranking/: reranking.md
docs/retrieval/: expanders.md  hybrid.md
docs/services/: backend-app.md  inference-app.md  llm-app.md
docs/stores/: chroma.md  qdrant.md
docs/util/: model-cache.md  observability.md
frontend/: components.py  session.py
frontend/tabs/: admin.py  chat.py  metrics.py  search.py
migrations/: env.py
migrations/versions/: fff822192562_baseline.py
services/: backend_app.py  inference_app.py  llm_app.py  worker_app.py
src/: factory.py
src/admin/: __init__.py  router.py
src/auth/: __init__.py  config.py  deps.py  oidc.py  passwords.py  ratelimit.py  repositories.py  router.py  schemas.py  service.py  tokens.py
src/clients/: backend.py
src/domain/: interfaces.py  models.py
src/embeddings/: local.py  remote.py
src/indexing/: enrich.py  pipeline.py
src/indexing/parsers/: base.py  python_ast.py  treesitter.py
src/ingest/: acquire.py  runner.py
src/jobs/: __init__.py  inprocess.py  redis_queue.py
src/llm/: base.py  ollama.py  openai_compatible.py  remote.py
src/persistence/: cache.py  db.py  history_repo.py  orm.py  registry_repo.py  schemas.py
src/reranking/: __init__.py  local.py  remote.py
src/retrieval/: bm25.py  filters.py  flags.py  hybrid.py  hyde.py  mmr.py  multiquery.py
src/stores/: chroma.py  qdrant.py
src/util/: concurrency.py  metrics.py  model_cache.py  sse.py
tests/: test_auth.py  test_batching.py  test_cache.py  test_concurrency.py  test_embedder_prefixes.py  test_enrich.py  test_filters.py  test_forward_auth.py  test_ingest.py  test_metrics.py  test_parsers_treesitter.py  test_remote_llm.py  test_security.py  test_smoke.py  test_streaming.py
(+26 files in other folders)
